packages/styles/src/bar.scss
@use "sass:map";

@import "./new-settings";
@import "./mixins";

$block: #{$fd-namespace}-bar;
$floating-footer: #{$fd-namespace}-bar--floating-footer;

@mixin fd-bar-floating-footer-offsets($offsetX: 1rem) {
  &.#{$floating-footer} {
    --fdBar_Padding_X: 0.5rem;
    --fdBar_Floating_Footer_Offset_X: #{$offsetX};
  }
}

.#{$block} {
  --fdBar_Z_Index: 1;
  --fdBar_Height: 2.75rem;
  --fdBar_Padding_X: 1rem;
  --fdBar_Padding_Top: 0;
  --fdBar_Padding_Bottom: 0;
  --fdBar_Border_Radius: 0;
  --fdBar_Floating_Footer_Offset_X: 0.5rem;
  --fdBar_Floating_Footer_Offset_Y: 0.5rem;
  --fdBar_Shadow: var(--sapContent_HeaderShadow);
  --fdBar_Background: var(--sapPageHeader_Background);

  @include fd-reset();

  @include fd-flex() {
    gap: 0.5rem;
    justify-content: space-between;
  }

  min-height: var(--fdBar_Height);
  z-index: var(--fdBar_Z_Index);
  box-shadow: var(--fdBar_Shadow);
  background: var(--fdBar_Background);
  padding-inline: var(--fdBar_Padding_X);
  border-radius: var(--fdBar_Border_Radius);
  padding-block: var(--fdBar_Padding_Top) var(--fdBar_Padding_Bottom);

  .#{$block}__header {
    font-size: var(--sapFontHeader5Size);
    font-family: var(--sapFontHeaderFamily);
    color: var(--sapPageHeader_TextColor);
  }

  &__left,
  &__middle,
  &__right {
    @include fd-reset();

    @include fd-flex-vertical-center() {
      gap: 0.5rem;
    }

    width: 100%;
    max-width: 100%;

    &--stack-contents-vertically {
      flex-direction: column;
    }
  }

  &__middle {
    justify-content: center;
  }

  &__right {
    justify-content: flex-end;
  }

  &__element {
    @include fd-reset();
    @include fd-flex-center();

    max-width: 100%;
    max-height: 100%;
    text-wrap: auto;
    color: var(--fdBar_Element_Text_Color, var(--sapTextColor));
    font-family: var(--fdBar_Element_Text_Font_Family, var(--sapFontFamily));
    font-size: var(--fdBar_Element_Text_Font_Size, var(--sapFontSize));
  }

  &__element--full-width {
    width: 100%;

    & > *:first-child {
      flex-grow: 1;
    }
  }

  &--responsive-paddings {
    @include fd-apply-responsive-paddings();
  }

  &--header {
    --fdBar_Shadow: var(--sapContent_HeaderShadow);
    --fdBar_Background: var(--sapPageHeader_Background);
    --fdBar_Element_Text_Color: var(sapPageHeader_TextColor);
    --fdBar_Element_Text_Font_Family: var(--sapFontHeaderFamily);
    --fdBar_Element_Text_Font_Size: var(--sapFontHeader5Size);

    &:has(+ .#{$block}--subheader) {
      --fdBar_Shadow: none;
    }
  }

  &--subheader {
    --fdBar_Height: 3rem;
    --fdBar_Padding_Bottom: 0.25rem;
    --fdBar_Shadow: var(--sapContent_HeaderShadow);
    --fdBar_Background: var(--sapPageHeader_Background);
  }

  &--header-with-subheader {
    --fdBar_Z_Index: 2;
    --fdBar_Shadow: none;
    --fdBar_Background: var(--sapPageHeader_Background);

    position: relative;
  }

  &--footer {
    --fdBar_Shadow: none;
    --fdBar_Background: var(--sapPageFooter_Background);
    --fdBar_Element_Text_Color: var(--sapPageFooter_TextColor);
    
    border-top: var(--sapGroup_TitleBorderWidth) solid var(--sapPageFooter_BorderColor);
  }

  &--floating-footer {
    --fdBar_Shadow: var(--sapContent_Shadow1);
    --fdBar_Z_Index: map.get($fd-z-index-levels, "top");
    --fdBar_Background: var(--sapPageFooter_Background);
    --fdBar_Element_Text_Color: var(--sapPageFooter_TextColor);
    --fdBar_Border_Radius: var(--sapElement_BorderCornerRadius);

    opacity: 1;
    position: absolute;
    left: var(--fdBar_Floating_Footer_Offset_X);
    right: var(--fdBar_Floating_Footer_Offset_X);
    bottom: var(--fdBar_Floating_Footer_Offset_Y);
  }

  &--growing {
    --fdBar_Height: auto;
    --fdBar_Padding_Top: 0.25rem;
    --fdBar_Padding_Bottom: 0.25rem;

    min-height: 2.5rem;

    // Compensate negative box shadow which results in visualy not centered items.
    &.#{$block}--header {
      --fdBar_Padding_Top: 0.375rem;
    }
  }

  // Page Design
  &--page,
  &--home-page {
    @include fd-bar-floating-footer-offsets();

    --fdBar_Padding_X: 1rem;
  }

  &--page-s,
  &--page-sm {
    @include fd-bar-floating-footer-offsets();

    --fdBar_Padding_X: 1rem;
  }

  &--home-page-s,
  &--home-page-sm {
    @include fd-bar-floating-footer-offsets();

    --fdBar_Padding_X: 0.5rem;
  }

  &--page-m_l,
  &--home-page-m_l,
  &--page-md_lg,
  &--home-page-md_lg {
    @include fd-bar-floating-footer-offsets(2rem);

    --fdBar_Padding_X: 2rem;
  }

  &--page-xl,
  &--home-page-xl {
    @include fd-bar-floating-footer-offsets(3rem);

    --fdBar_Padding_X: 3rem;
  }

  &--initial-suggestion-title, &--initial-suggestion-subline {
    height: auto;
  }

  &--initial-suggestion-title {
    padding-block-start: 0.5rem;
  }

  &--initial-suggestion-subline {
    --fdBar_Padding_Bottom: 0.5rem;
    
    padding-block-start: 0.25rem;
  }

  @include fd-compact-or-condensed() {
    --fdBar_Height: 2.5rem;

    &.#{$block}--subheader {
      --fdBar_Height: 2.25rem;
    }
  }
}

